--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,13 +1,14 @@
 <br>
-<div>
+<div class="container about-us-container">
     <h2>Contactanos</h2>
-    <p>Conozca mas sobre quienes somos, nuestra mision y que nos motiva</p>
+    <p class="about-subtitle">Conozca mas sobre quienes somos, nuestra mision y que nos motiva</p>
     <!--Seccion de mision-->
-    <div>
-        <div>
-
+    <div class="row mission-section">
+        <div class="col-lg-6">
+            <img src="https://lsconlinecoursestorage.blob.core.windows.net/site/Mission.gif" alt="Imagen de mision"
+                class="img-fluid mission-img">
         </div>
-        <div>
+        <div class="col-lg-6">
             <h3>Nuestra mision</h3>
             <p>En <strong>SmartCertify</strong>, nuestra misión es equipar a las personas con las herramientas y el conocimiento para
                 sobresalir en el mundo de la tecnología a través de experiencias de aprendizaje accesibles, innovadoras y prácticas. Somos
@@ -17,11 +18,12 @@
     </div>
 
     <!--Seccion de vision-->
-    <div>
-        <div>
-
+    <div class="row vision-section">
+        <div class="col-lg-6 order-lg-2">
+            <img src="https://lsconlinecoursestorage.blob.core.windows.net/site/Vission.gif" alt="Imagen de vision"
+                class="img-fluid vision-img">
         </div>
-        <div>
+        <div class="col-lg-6 order-lg-2">
             <h3>Nuestra vision</h3>
             <p>Nuestra visión es establecer <strong>SmartCertify</strong> como una plataforma global confiable para servicios técnicos.
                 aprendizaje y certificaciones. Al adoptar la innovación y la inclusión, nuestro objetivo es inspirar y preparar a los
@@ -29,9 +31,12 @@
         </div>
     </div>
     <!--Seccion de historia-->
-    <h3>Nuestra historia</h3>
-    <p><strong>SmartCertify</strong> comenzó como un proyecto apasionante impulsado por la visión de compartir conocimientos y empoderar a los 
+    <div class="history-section">
+        <h3>Nuestra historia</h3>
+        <p><strong>SmartCertify</strong> comenzó como un proyecto apasionante impulsado por la visión de compartir conocimientos y empoderar a los 
         aspirantes a profesionales de la tecnología. Lo que comenzó como una idea simple se ha convertido en una plataforma confiable que presta 
         servicios a una comunidad global de estudiantes. Nuestro viaje está guiado por la creencia de que <strong>¡Todos pueden codificar!</strong> 
         y seguimos dedicados a brindar educación de alta calidad y oportunidades de certificación a estudiantes de todo el mundo.</p>
+    </div>
+    
 </div>
