--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -1,65 +1,65 @@
-<div>
+<div class="container contact-us-container">
     <h2>Contactanos</h2>
-    <p>¡Nos encantaría saber de usted! Comuníquese con nosotros mediante el siguiente formulario o mediante cualquiera de 
+    <p class="contact-subtitle">¡Nos encantaría saber de usted! Comuníquese con nosotros mediante el siguiente formulario o mediante cualquiera de 
         nuestros métodos de contacto.</p>
-    <div>
+    <div class="row">
         <!--Formulario de contactos-->
-        <div>
-            <form action="">
-                <div>
-                    <label for="name">Tu Nombre</label>
-                    <input type="text" placeholder="Ingresa tu nombre">
-                    <div>
+        <div class="col-lg-6">
+            <form class="contact-form">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Tu Nombre</label>
+                    <input type="text" placeholder="Ingresa tu nombre" class="form-control">
+                    <div class="text-danger">
                         <small>El nombre es obligatorio</small>
                     </div>
                 </div>
-                <div>
-                    <label for="email">Tu correo</label>
-                    <input type="email" placeholder="Ingresa tu correo electronico">
-                    <div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Tu correo</label>
+                    <input type="email" placeholder="Ingresa tu correo electronico" class="form-control">
+                    <div class="text-danger">
                         <small>El correo electronico es obligatorio</small>
                         <small>Formato de correo electronico no valido</small>
                     </div>
                 </div>
-                <div>
-                    <label for="subject">Asunto</label>
-                    <input type="text" placeholder="Ingrese el asunto">
-                    <div>
+                <div class="mb-3">
+                    <label for="subject" class="form-label">Asunto</label>
+                    <input type="text" placeholder="Ingrese el asunto" class="form-control">
+                    <div class="text-danger">
                         <small>El asunto es obligatorio</small>
                     </div>
                 </div>
-                <div>
-                    <label for="message">Mensaje</label>
-                    <textarea id="message" rows="5" placeholder="Ingrese el mensaje"></textarea>
-                    <div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Mensaje</label>
+                    <textarea id="message" rows="5" placeholder="Ingrese el mensaje" class="form-control"></textarea>
+                    <div class="text-danger">
                         <small>El mensaje es obligatorio</small>
                     </div>
                 </div>
-                <button type="submit">Enviar Mensaje</button>
+                <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
             </form>
         </div>
         <!--Datos de contacto-->
-        <div>
-            <div>
-                <div>
+        <div class="col-lg-6">
+            <div class="contact-details">
+                <div class="contact-info"> 
                     <h4>Direccion</h4>
                     <p>Contacto por correo</p>
                 </div>
-                <div>
+                <div class="contact-info">
                     <h4>Telefono</h4>
                     <p>+591 77777777</p>
                 </div>
-                <div>
+                <div class="contact-info">
                     <h4>Email</h4>
                     <p>learnsmartcoding&#64;gmail.com</p>
                 </div>
-                <div>
-                    <h4>Siganos</h4>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
+                <div class="social-media">
+                    <h4>Siguenos</h4>
+                    <a href="https://www.youtube.com" class="social-icon"><i class="fab fa-youtube"></i></a>
+                    <a href="https://x.com/" class="social-icon"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.instagram.com" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com" class="social-icon"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
