--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -1,14 +1,14 @@
-<footer>
-    <div>
-        <div>
+<footer class="footer bg-dark text-white py-4">
+    <div class="container">
+        <div class="row">
             <!--Seccion acerca de-->
-            <div>
+            <div class="col-md-4 mb-3">
                 <h5>Acerca de Smartcertify</h5>
                 <p>SmartCertify brinda a los estudiantes educación y certificación en línea de primer nivel en las últimas tecnologías. 
                     Aprende, crece y alcanza tus objetivos con nosotros.</p>
             </div>
             <!--Enlaces rapidos-->
-            <div>
+            <div class="col-md-4 mb-3">
                 <h5>Enlaces Rapidos</h5>
                 <ul>
                     <li><a href="/home">Inicio</a></li>
@@ -18,23 +18,23 @@
                 </ul>
             </div>
             <!--informacion de contactos-->
-            <div>
+            <div class="col-md-4 mb-3">
                 <h5>Contactanos</h5>
-                <p>Email: <a href="">learnsmartcoding&#64;gmail.com</a></p>
+                <p>Email: <a href="mailto:learnsmartcoding&#64;gmail.com">learnsmartcoding&#64;gmail.com</a></p>
                 <p>Telefono: +591 77777777</p>
-                <p>Sigenos</p>
-                <div>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
+                <p>Siguenos</p>
+                <div class="social-media">
+                    <a href="https://www.youtube.com" class="social-icon"><i class="fab fa-youtube"></i></a>
+                    <a href="https://x.com/" class="social-icon"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.instagram.com" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com" class="social-icon"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
-        <hr>
-        <div>
-            <p>&copy; 2026 SmartCertify. All rights reserved.</p>
+        <hr class="bg-secondary">
+        <div class="text-center">
+            <p class="mb-0">&copy; 2026 SmartCertify. All rights reserved.</p>
         </div>
     </div>
 </footer>
