--- a/src/app/pages/view-claims/view-claims.component.html
+++ b/src/app/pages/view-claims/view-claims.component.html
@@ -1,7 +1,7 @@
 <section>
-    <div>
+    <div class="container">
         <h2>Reclamos</h2>
-        <table>
+        <table class="table table-hover">
             <thead>
                 <tr>
                     <td>Reclamos</td>
