--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
+<app-home></app-home>
+<app-data-bindings></app-data-bindings>
 <app-about></app-about>
 <app-contact-us></app-contact-us>
 <app-footer></app-footer>
